# rfc3986-stubs

./: .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: build.yaml  lint.yaml  release.yaml
rfc3986-stubs/: __init__.pyi  _mixin.pyi  api.pyi  builder.pyi  compat.pyi  exceptions.pyi  iri.pyi  misc.pyi  normalizers.pyi  parseresult.pyi  uri.pyi  validators.pyi
